@@ -24,7 +24,13 @@
 #ifndef __preface_h_OBJECTS_INCLUDE
 #define __preface_h_OBJECTS_INCLUDE
 
-#include <misc.h>
+#ifdef __hpux__
+#include <sys/sigevent.h>
+#endif
+
+#include <stdarg.h>
+#include <stdlib.h>
+
 #if 0
 #include <base/objc-gnu2next.h>
 #include <base/fake-main.h>
