@@ -1,6 +1,7 @@
 1999-04-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
-	* mframe-preface.h: Include misc.h instead of stdlib.h and stdarg.h.
+	* mframe-preface.h: For HPUX, include sys/sigevent.h before stdarg.h and
+	stdlib.h.
 
 1999-04-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
